tdf#91715: lock SolarMutex from dbaui::~ODatabaseAdministrationDialog()

Change-Id: I91b78ec3a19b6f09ae6e9ff723ebda41d656f2fc
(cherry picked from commit 0a7375e372ee9583d31d44a7cc7b6a21e6197bf1)
Signed-off-by: Michael Stahl <mstahl@redhat.com>